--- a/src/app/componente/cidade/cidade-cadastro/cidade-cadastro.component.html
+++ b/src/app/componente/cidade/cidade-cadastro/cidade-cadastro.component.html
@@ -3,18 +3,31 @@
     <h3>Cidades</h3>
 </div>
 <div class="container space-up">
+    <div *ngIf="exibirAlertWarning" class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+    </div>
+    <div *ngIf="exibirAlertDanger" class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+        <span>
+            {{ msgAlertDanger }}
+        </span>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+    </div>
     <h4>Cadastrar nova cidade:</h4>
     <div class="container">
         <form>
             <div class="row align-items-center">
-
                 <div class="col-md-6">
                     <mat-form-field class="full-width">
-                        <input [(ngModel)]="novaCidade" name="novaCidade" matInput placeholder="Nome">
+                        <input [(ngModel)]="nomeCidade" name="novaCidade" matInput placeholder="Nome">
                     </mat-form-field>
                 </div>
                 <div class="col-md-6">
-                    <button type="button" class="btn btn-primary">Salvar</button>
+                    <button (click)="pesquisar()" type="button" class="btn btn-primary">Pesquisar</button>
                     <button (click)="voltar()" type="button" class="btn btn-secondary">Voltar</button>
                 </div>
             </div>
