--- a/src/app/componente/home/home.component.html
+++ b/src/app/componente/home/home.component.html
@@ -1,4 +1,10 @@
 <app-navbar></app-navbar>
-<p>
-    home works!
-</p>
+<div class="container banner">
+    <div class="jumbotron">
+        <h1 class="display-4">Weather Forecast</h1>
+        <p class="lead">Aplicação em desenvolvimento em Angular 5.</p>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" target="_blank" href="https://github.com/msantosfelipe/weather-forecast" role="button">Github</a>
+        </p>
+    </div>
+</div>
