--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light color-nav">
-    <a class="navbar-brand" href="javascript:void(0)">Weather Forecast</a>
+    <img class="navbar-brand img-fluid" src="../../../assets/images/logo.png" alt="Ver mapa" />
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
