--- a/src/app/componente/cidade/cidade-cadastro/cidade-cadastro.component.html
+++ b/src/app/componente/cidade/cidade-cadastro/cidade-cadastro.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px', fullScreenBackdrop: true }"></ngx-loading>
+
 <div class="container-fluid titulo space-down">
     <span>Cidades</span>
 </div>
