--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -12,6 +12,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0)" (click)="mudarPagina('/cidades')">Cidades</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="javascript:void(0)" (click)="mudarPagina('/relatorios')">Relatórios</a>
+            </li>
         </ul>
     </div>
 </nav>
